--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,26 @@
-
 <main class="main">
-  <button routerLink="home" routerLinkActive="ruta-activa">Home</button>
-  <button routerLink="quien-soy" routerLinkActive="ruta-activa">Quien soy</button>
-  <button routerLink="login" routerLinkActive="ruta-activa">Iniciar sesion</button>
+  <nav class="custom-nav navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+      <img src="../assets/icono.png" width="35" height="35" class="d-inline-block align-top mx-1" alt="Icono">
+      Jueguinhos
+      <img src="../assets/fantasmas4.png" width="55" height="55" class="d-inline-block align-top ml-2" alt="Icono">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item mx-3">
+          <a class="nav-link" routerLink="home" routerLinkActive="ruta-activa">Inicio</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" routerLink="quien-soy" routerLinkActive="ruta-activa">Quien soy</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" routerLink="login" routerLinkActive="ruta-activa">Iniciar sesión</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <router-outlet />
 </main>
-
-
-<router-outlet />
