--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -1,1 +1,11 @@
 <h2>Quien soy</h2>
+
+<h3>Datos alumno</h3>
+<p>Nombre: Lautaro</p>
+<p>Apellido: Monserrat</p>
+<p>Edad: 20</p>
+
+<img width="200" src="../../../assets/yo.jpg" alt="Mi foto">
+
+<h3>Explicacion juego propio</h3>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At vel repudiandae, a, accusantium tenetur laboriosam aut harum earum adipisci maiores ipsam ex eligendi. Alias et necessitatibus aperiam quo iure numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nisi recusandae itaque officia error amet ratione. Iure debitis perferendis dicta nihil amet officia reprehenderit nemo mollitia adipisci, quisquam aut ducimus.</p>
