--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<main class="main">
-  <nav class="custom-nav navbar navbar-expand-lg navbar-light">
+
+  <nav class="custom-nav navbar navbar-expand-lg navbar-light shadow-lg">
     <a class="navbar-brand d-flex align-items-center" href="#">
       <img src="../assets/icono.png" width="35" height="35" class="d-inline-block align-top mx-1" alt="Icono">
       Jueguinhos
@@ -22,5 +22,6 @@
       </ul>
     </div>
   </nav>
+
+
   <router-outlet />
-</main>
