--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" routerLink="quien-soy" routerLinkActive="ruta-activa">Quien soy</a>
         </li>
         <li class="nav-item mx-3">
-          <a class="nav-link" routerLink="login" routerLinkActive="ruta-activa">Iniciar sesión</a>
+          <a class="nav-link" routerLink="login" routerLinkActive="ruta-activa">Iniciar sesion</a>
         </li>
       </ul>
     </div>
