empece registro y login con firebase

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,16 @@
 
 .ruta-activa {
-    /* background-color: rgb(232, 86, 86); */
-    font-weight: 700;
+    font-weight: 500;
+    color: #000;
 }
 
 .custom-nav {
     height: 70px;
     background-color: #E4E4E4;
-    
+    transition: all;
+    padding: 0px 10px;
+}
+
+.nav-opt {
+    background-color: #E4E4E4;
 }
