--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-  <nav class="custom-nav navbar navbar-expand-lg navbar-light shadow-lg">
+  <nav class="custom-nav navbar navbar-expand-lg navbar-light shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
       <img src="../assets/icono.png" width="35" height="35" class="d-inline-block align-top mx-1" alt="Icono">
       Jueguinhos
@@ -9,7 +9,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav nav-opt">
         <li class="nav-item mx-3">
           <a class="nav-link" routerLink="home" routerLinkActive="ruta-activa">Inicio</a>
         </li>
