--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,19 @@
 <h2>Iniciar sesion</h2>
 
 
-<label for="">Usuario</label>
-<input type="text" [(ngModel)]="usuario">
+<label for="">Correo electronico</label>
+<input type="text" [(ngModel)]="email">
 
 <label for="">Contraseña</label>
-<input type="password" [(ngModel)]="clave">
+<input type="password" [(ngModel)]="pass">
+
+@if (errorMsg != '') {
+    <p style="color: red">{{errorMsg}}</p>
+}
 
 <br><br>
-<button (click)="login()">Iniciar sesion</button>
+<button (click)="Login()">Iniciar sesion</button>
+
+<!-- <button (click)="GetData()">Obtener logs</button> -->
+<br>
+<button routerLink="../register">Crear cuenta nueva</button>
