--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,7 +12,7 @@
 }
 
 <br><br>
-<button (click)="Register()">Registrarse</button>
+<button (click)="register()">Registrarse</button>
 
 
 @if (loggedUser != '') {
