--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,30 +1,38 @@
 <h1 class="text-center my-5">Sala de juegos</h1>
 
-<div class="d-flex ">
-    <div class="card mx-5" style="width: 18rem;">
-        <img src="../../../assets/ahorcado.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Ahorcado</h5>
-          <p class="card-text">Pon a prueba tu habilidad para descifrar palabras. Adivina la palabra oculta antes de que el ahorcado esté completo. Desafío de ingenio y vocabulario.</p>
-          <a href="#" class="btn btn-primary mt-4">Jugar</a>
+<div class="container d-flex justify-content-center">
+    <div class="row justify-content-around col-11">
+        <div class="col-sm-10 col-md-4 mb-4">
+            <div class="card">
+                <img src="../../../assets/ahorcado.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Ahorcado</h5>
+                    <p class="card-text">Pon a prueba tu habilidad para descifrar palabras. Adivina la palabra oculta antes de que el ahorcado esté completo.</p>
+                    <a href="#" class="btn btn-primary mt-4">Jugar</a>
+                </div>
+            </div>
         </div>
-    </div>
-    
-    <div class="card mx-5" style="width: 18rem;">
-        <img src="../../../assets/preguntados.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Preguntados</h5>
-          <p class="card-text">Sumérgete en un mundo de conocimiento. Responde preguntas de diversas categorías y desafía a tus amigos en este emocionante juego de trivia.</p>
-          <a href="#" class="btn btn-primary mt-4">Jugar</a>
+
+        <div class="col-sm-10 col-md-4 mb-4">
+            <div class="card">
+                <img src="../../../assets/preguntados.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Preguntados</h5>
+                    <p class="card-text">Sumérgete en un mundo de conocimiento. Responde preguntas y desafía a tus amigos en este emocionante juego de trivia.</p>
+                    <a href="#" class="btn btn-primary mt-4">Jugar</a>
+                </div>
+            </div>
         </div>
-    </div>
-    
-    <div class="card mx-5" style="width: 18rem;">
-        <img src="../../../assets/mayomenor.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Mayor o Menor</h5>
-          <p class="card-text">¿Arriesgas o te retiras? Haz tu apuesta y predice si el próximo numero será mayor o menor que el anterior. Un juego de riesgo y estrategia con la emoción del azar.</p>
-          <a href="#" class="btn btn-primary mt-4">Jugar</a>
+
+        <div class="col-sm-10 col-md-4 mb-4">
+            <div class="card">
+                <img src="../../../assets/mayomenor.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Mayor o Menor</h5>
+                    <p class="card-text">Predice si el próximo numero será mayor o menor que el anterior. Un juego de riesgo y estrategia con la emoción del azar.</p>
+                    <a href="#" class="btn btn-primary mt-4">Jugar</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
