--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,21 +1,37 @@
-<h2>Registro</h2>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-5 reg-container">
+        <div class="card shadow mt-4">
+            <div class="card-header">
+            <h1 class="text-center my-3">Registro</h1>
+            </div>
+            <div class="card-body">
+            <form>
+                <div class="form-group mt-3">
+                <label for="email">Correo electronico</label>
+                <input type="email" [(ngModel)]="newEmail" name="email" class="form-control" id="email" placeholder="Ingrese su correo electronico">
+                </div>
+                <div class="form-group mt-3">
+                <label for="pass">Contraseña</label>
+                <input type="password" [(ngModel)]="newPass" name="pass" class="form-control" id="pass" placeholder="Ingrese su contraseña">
+                </div>
+                <div class="form-group mt-3">
+                <label for="passConf">Confirmar contraseña</label>
+                <input type="password" [(ngModel)]="newConfirmPass" name="passConf" class="form-control" id="passConf" placeholder="Ingrese nuevamente su contraseña">
+                </div>
+                
+                @if (errorMsg != '') {
+                    <p class="error-msg mt-1">{{errorMsg}}</p>
+                }
 
-
-<label for="">Correo electronico</label>
-<input type="text" [(ngModel)]="newEmail">
-
-<label for="">Contraseña</label>
-<input type="password" [(ngModel)]="newPass">
-
-@if (errorMsg != '') {
-    <p style="color: red">{{errorMsg}}</p>
-}
-
-<br><br>
-<button (click)="register()">Registrarse</button>
-
-
-@if (loggedUser != '') {
-    <h2>Usuario registrado: {{loggedUser}}</h2>
-}
+                <div class="d-flex justify-content-center mt-5">
+                    <button type="submit" class="btn btn-primary btn-block btn-reg my-4" (click)="register()">Registrarse</button>
+                </div>
+            </form>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
+    
 
