--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,54 @@
 .main {
     background-color: #7ccff8;
     height: 100vh;
+    font-family: "Radio Canada Big", sans-serif;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    min-height: 100vh; position: relative; z-index: 1;
+}
+  
+@keyframes moveClouds {
+    0% { transform: translateX(0) translateY(0); }
+    50% { transform: translateX(3vw) translateY(-3vh); } 
+    100% { transform: translateX(0) translateY(0); }
+}
+
+.cloud {
+    animation: moveClouds 20s linear infinite alternate;
+    position: absolute;
+}
+
+.cloud img {
+    display: block;
+    width: 17vw; 
+    height: auto;
+}
+
+.cloud1 {
+    top: 10%;
+    left: 10%;
+    position: absolute; 
+    z-index: 0;
+}
+
+.cloud2 {
+    top: 30%;
+    left: 50%;
+    position: absolute; 
+    z-index: 0;
+}
+
+.cloud3 {
+    top: 60%;
+    left: 80%;
+    position: absolute; 
+    z-index: 0;
+}
+
+.cloud4 {
+    bottom: 10%; 
+    left: 10%;
+    position: absolute; 
+    z-index: 0;
 }
