agregue google auth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 
   <nav class="custom-nav navbar navbar-expand-lg navbar-light shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="../assets/icono.png" width="35" height="35" class="d-inline-block align-top mx-1" alt="Icono">
-      Jueguinhos
-      <img src="../assets/fantasmas4.png" width="55" height="55" class="d-inline-block align-top ml-2" alt="Icono">
+      <img src="../assets/icono.png" width="37" height="37" class="d-inline-block align-top mx-1" alt="Icono">
+      <h2 class="mt-2">Jueguinhos</h2>
+      <img src="../assets/fantasmas.png" width="65" height="65" class="d-inline-block align-top ml-2 mt-1" alt="Icono">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
