--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,6 +23,7 @@
 
               <div class="d-flex justify-content-center mt-5">
                 <button type="submit" class="btn btn-primary btn-block btn-login" (click)="login()">Iniciar sesion</button>
+                <img src="../../../assets/google.png" class="google-icon mt-2 ms-2" (click)="loginWithGoogle()" alt="">
               </div>
               <div class="text-center mb-3">
                 <button type="button" class="btn btn-link" (click)="fillInputs()">Acceso rapido</button>
