--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-center my-5">Sala de juegos</h1>
+<h1 class="text-center my-5 main-h">Sala de juegos</h1>
 
 <div class="container d-flex justify-content-center">
     <div class="row justify-content-around col-11">
