quien soy estilizado

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="container d-flex justify-content-center">
     <div class="row justify-content-around col-11">
         <div class="col-sm-10 col-md-4 mb-4">
-            <div class="card">
+            <div class="card shadow">
                 <img src="../../../assets/ahorcado.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Ahorcado</h5>
@@ -14,7 +14,7 @@
         </div>
 
         <div class="col-sm-10 col-md-4 mb-4">
-            <div class="card">
+            <div class="card shadow">
                 <img src="../../../assets/preguntados.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Preguntados</h5>
@@ -25,7 +25,7 @@
         </div>
 
         <div class="col-sm-10 col-md-4 mb-4">
-            <div class="card">
+            <div class="card shadow">
                 <img src="../../../assets/mayomenor.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Mayor o Menor</h5>
