--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -1,11 +1,33 @@
-<h2>Quien soy</h2>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-8 quiensoy-container">
+        <div class="card shadow mt-4">
+          <div class="card-header">
+            <h1 class="text-center my-3">Quien soy</h1>
+          </div>
+          <div class="card-body mt-2">
+            <div class="d-flex justify-content-center">
+                <img width="200" src="../../../assets/yo.jpg" class="custom-img" alt="Mi foto">
+            </div>
+            <h3 class="h3-dato">Mis datos</h3>
+            <p class="p-dato">Lautaro Monserrat</p>
+            <p class="p-dato">20 años</p>
 
-<h3>Datos alumno</h3>
-<p>Nombre: Lautaro</p>
-<p>Apellido: Monserrat</p>
-<p>Edad: 20</p>
-
-<img width="200" src="../../../assets/yo.jpg" alt="Mi foto">
-
-<h3>Explicacion juego propio</h3>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At vel repudiandae, a, accusantium tenetur laboriosam aut harum earum adipisci maiores ipsam ex eligendi. Alias et necessitatibus aperiam quo iure numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nisi recusandae itaque officia error amet ratione. Iure debitis perferendis dicta nihil amet officia reprehenderit nemo mollitia adipisci, quisquam aut ducimus.</p>
+            <h5 class="mt-4">Tecnologias</h5>
+            <i class="devicon-cplusplus-plain colored custom-icon mx-1"></i>
+            <i class="devicon-csharp-plain colored custom-icon mx-1"></i>
+            <i class="devicon-azuresqldatabase-plain custom-icon mx-1"></i>
+            <i class="devicon-php-plain colored custom-icon mx-1"></i>
+            <i class="devicon-javascript-plain colored custom-icon mx-1"></i>
+            <i class="devicon-nodejs-plain colored custom-icon mx-1"></i>
+            <i class="devicon-mongodb-plain colored custom-icon mx-1"></i>
+          
+            <div class="border-bottom mt-3 mb-3"></div>
+            <h3>Explicacion juego propio</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At vel repudiandae, a, accusantium tenetur laboriosam aut harum earum adipisci maiores ipsam ex eligendi. Alias et necessitatibus aperiam quo iure numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nisi recusandae itaque officia error amet ratione. Iure debitis perferendis dicta nihil amet officia reprehenderit nemo mollitia adipisci, quisquam aut ducimus.</p>
+            
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
