--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 .main {
     background-color: #7ccff8;
-    height: 100vh;
+    height: 100%;
     font-family: "Radio Canada Big", sans-serif;
     margin: 0;
     padding: 0;
