--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,8 @@
     transition: all;
     padding: 0px 10px;
     z-index: 2;
+    position: fixed;
+    width: 100%;
 }
 
 .nav-opt {
@@ -17,4 +19,158 @@
     cursor: pointer;
     z-index: 2;
     font-size: 17px;
+}
+
+.chat-bubble {
+    position: fixed;
+    bottom: 30px;
+    right: 35px;
+    width: 75px;
+    height: 75px;
+    background-color: #2b95ff;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center !important;
+    align-items: center !important; 
+    cursor: pointer;
+    z-index: 9999;
+}
+
+.chat-bubble:hover {
+    background-color: #2080e1;
+    transition: all 0.3s;
+}
+
+.h-chat {
+    font-size: 24px;
+}
+
+.chat-icon {
+    width: 50px;
+    height: 50px;
+    font-size: 40px;
+    margin-bottom: 11px;
+    color: #fff;
+}
+
+.close-chat-icon {
+    height: 50px;
+    font-size: 30px;
+    color: #232323;
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: 20px;
+}
+
+.chat-window {
+    position: fixed;
+    bottom: 40px; 
+    right: 70px;
+    width: 500px;
+    height: 500px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    z-index: 9998;
+}
+
+.chat-header {
+    width: 100%;
+    height: 85px;
+    background-color: #2b95ff;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chat-footer {
+    width: 100%;
+    height: 75px;
+    background-color: #E4E4E4;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    bottom: auto;
+}
+
+.chat-footer input {
+    width: 75%;
+    height: 50px;
+    border: none;
+    border-radius: 10px;
+    margin-left: 10px;
+    padding-left: 10px;
+    font-size: 16px;
+
+}
+
+.btn-enviar {
+    width: 15%;
+    height: 38px;
+    border: none;
+    border-radius: 10px;
+    margin-right: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #2b95ff;
+}
+
+.chat-messages {
+    max-height: 350px;
+    overflow-y: scroll;
+    padding: 10px;
+}
+
+.chat-message {
+    margin: 25px 0;
+    width: 65%;
+    border-radius: 4px;
+}
+
+.chat-message-me {
+    background-color: #c7c7c7;
+    margin-left: auto;
+}
+
+.chat-message-other {
+    background-color: #E4E4E4;
+    margin-right: auto;
+}
+
+.chat-message-user {
+    padding: 3px;
+    margin-left: 6px;
+}
+
+.chat-message-text {
+    padding: 3px;
+    margin-left: 6px;
+}
+
+.chat-message-time {
+    padding: 3px;
+    margin-left: 53%;
+    font-size: 13px;
+    color: #4d4d4d;
+}
+
+@media screen and (max-width: 768px) {
+    .chat-window {
+        width: 100%;
+        height: 70%;
+        bottom: 0;
+        right: 0;
+    }
+    
+    .chat-messages {
+        height: 100%;
+    }
+
+    .chat-message-time {
+        margin-left: 45%;
+    }
 }
