--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,16 @@
-<h1 class="text-center my-5 main-h">Sala de juegos</h1>
+<div class="bg-header">
+    <img src="../../../assets/cartel.png" class="main-cartel" alt="">
+</div>
 
-<div class="container d-flex justify-content-center">
-    <div class="row justify-content-around col-11">
+<div class="container d-flex justify-content-center mt-5">
+    <div class="row justify-content-around col-10 mt-5">
         <div class="col-sm-10 col-md-4 mb-4">
             <div class="card shadow">
                 <img src="../../../assets/ahorcado.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Ahorcado</h5>
                     <p class="card-text">Pon a prueba tu habilidad para descifrar palabras. Adivina la palabra oculta antes de que el ahorcado esté completo.</p>
-                    <a href="#" class="btn btn-primary mt-4">Jugar</a>
+                    <button href="#" class="btn btn-primary mt-4" disabled>Proximamente</button>
                 </div>
             </div>
         </div>
@@ -18,8 +20,8 @@
                 <img src="../../../assets/preguntados.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Preguntados</h5>
-                    <p class="card-text">Sumérgete en un mundo de conocimiento. Responde preguntas y desafía a tus amigos en este emocionante juego de trivia.</p>
-                    <a href="#" class="btn btn-primary mt-4">Jugar</a>
+                    <p class="card-text">Sumérgete en un mundo de conocimiento. Responde preguntas y desafía a tus amigos en este increible juego de trivia.</p>
+                    <button href="#" class="btn btn-primary mt-4" disabled>Proximamente</button>
                 </div>
             </div>
         </div>
@@ -30,9 +32,13 @@
                 <div class="card-body">
                     <h5 class="card-title">Mayor o Menor</h5>
                     <p class="card-text">Predice si el próximo numero será mayor o menor que el anterior. Un juego de riesgo y estrategia con la emoción del azar.</p>
-                    <a href="#" class="btn btn-primary mt-4">Jugar</a>
+                    <button href="#" class="btn btn-primary mt-4" disabled>Proximamente</button>
                 </div>
             </div>
         </div>
+        
+
+
+        
     </div>
 </div>
