--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-5">
+<div class="container">
     <div class="row justify-content-center">
       <div class="col-md-5 login-container">
         <div class="card shadow mt-4">
