--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 quiensoy-container">
         <div class="card shadow mt-4">
