mejoras generales y ahorcado v1 terminado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 
   <nav class="custom-nav navbar navbar-expand-lg navbar-light shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="../assets/icono.png" width="37" height="37" class="d-inline-block align-top mx-1" alt="Icono">
-      <h2 class="mt-2">Jueguinhos</h2>
-      <img src="../assets/fantasmas.png" width="65" height="65" class="d-inline-block align-top ml-2 mt-1" alt="Icono">
+      <img src="../assets/iconic.png" width="185" max-height="200" class="d-inline-block align-top ml-2 mt-1" alt="Icono">
+      <img src="../assets/fantasmas.png" width="75" max-height="70" class="d-inline-block align-top ml-2 mt-1" alt="Icono">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -52,7 +51,7 @@
       <div class="chat-window d-flex flex-column justify-content-between ">
         <div class="chat-header">
           <img src="../assets/icono.png" width="37" height="37" class="d-inline-block align-top mx-1 mt-1" alt="Icono">
-          <p class="h-chat mt-4">Chat</p>
+          <p class="h-chat mt-4">#General</p>
           <img src="../assets/fantasmas.png" width="65" height="65" class="d-inline-block align-top ms-1 ml-2 mt-2" alt="Icono">
         
           <fa-icon class="close-chat-icon" [icon]="faTimes" (click)="toggleChatWindow()"></fa-icon>
