--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Ahorcado</h5>
                     <p class="card-text">Pon a prueba tu habilidad para descifrar palabras. Adivina la palabra oculta antes de que el ahorcado esté completo.</p>
-                    <button href="#" class="btn btn-primary mt-4" disabled>Proximamente</button>
+                    <button routerLink="../ahorcado" class="btn btn-primary mt-4">Jugar</button>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Mayor o Menor</h5>
                     <p class="card-text">Predice si el próximo numero será mayor o menor que el anterior. Un juego de riesgo y estrategia con la emoción del azar.</p>
-                    <button href="#" class="btn btn-primary mt-4" disabled>Proximamente</button>
+                    <button routerLink="../mayor-o-menor" class="btn btn-primary mt-4">Jugar</button>
                 </div>
             </div>
         </div>
