--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,7 @@
-<h2>Error 404 - Page not found</h2>
+<div class="container d-flex justify-content-center align-items-center">
+    <div class="con-404">
+        <h2 class="h-404">Oops!</h2>
+        <h3 class="sh-404">Error 404 - Pagina no encontrada</h3>
+        <button routerLink="../home" class="btn btn-primary mt-4">Volver al inicio</button>
+    </div>
+</div>
