--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 
   <nav class="custom-nav navbar navbar-expand-lg navbar-light shadow">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="../assets/iconic.png" width="185" max-height="200" class="d-inline-block align-top ml-2 mt-1" alt="Icono">
-      <img src="../assets/fantasmas.png" width="75" max-height="70" class="d-inline-block align-top ml-2 mt-1" alt="Icono">
+      <img src="../assets/iconic.png" class="d-inline-block align-top ml-2 mt-1 icono" alt="Icono">
+      <img src="../assets/fantasmas.png" class="d-inline-block align-top ml-2 mt-1 fantasmas" alt="Icono">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <fa-icon [icon]="faUser"></fa-icon>
             </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-end mb-3 rounded-bottom" aria-labelledby="navbarDropdown">
               <div class="col text-center">
                 <img src="../assets/perfil.png" width="100" alt="Perfil">
               </div>
