--- a/src/app/components/quien-soy/quien-soy.component.html
+++ b/src/app/components/quien-soy/quien-soy.component.html
@@ -23,9 +23,12 @@
             <i class="devicon-mongodb-plain colored custom-icon mx-1"></i>
           
             <div class="border-bottom mt-3 mb-3"></div>
-            <h3>Explicacion juego propio</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At vel repudiandae, a, accusantium tenetur laboriosam aut harum earum adipisci maiores ipsam ex eligendi. Alias et necessitatibus aperiam quo iure numquam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea nisi recusandae itaque officia error amet ratione. Iure debitis perferendis dicta nihil amet officia reprehenderit nemo mollitia adipisci, quisquam aut ducimus.</p>
+            <h3>Busca el tesoro</h3>
+            <h5>Explicacion</h5>
+            <p>Es un juego donde el jugador busca un tesoro escondido en un tablero de 7x7. El juego proporciona pistas basadas en la proximidad del jugador al tesoro. El objetivo es encontrar el tesoro en el menor número de intentos posible.</p>
             
+            <h5>Puntuacion</h5>
+            <p>La puntuacion inicial y mas alta es de 500 puntos, por cada casillero fallido se restaran 10 puntos.</p>
           </div>
         </div>
       </div>
