--- a/src/app/components/ahorcado/ahorcado.component.html
+++ b/src/app/components/ahorcado/ahorcado.component.html
@@ -47,37 +47,37 @@
 
         <div class="keyboard mb-4 d-flex flex-column justify-content-center align-items-center shadow">
             <div class="row-1">
-                <button class="letter" (click)="getLetter('Q')">Q</button>
-                <button class="letter" (click)="getLetter('W')">W</button>
-                <button class="letter" (click)="getLetter('E')">E</button>
-                <button class="letter" (click)="getLetter('R')">R</button>
-                <button class="letter" (click)="getLetter('T')">T</button>
-                <button class="letter" (click)="getLetter('Y')">Y</button>
-                <button class="letter" (click)="getLetter('U')">U</button>
-                <button class="letter" (click)="getLetter('I')">I</button>
-                <button class="letter" (click)="getLetter('O')">O</button>
-                <button class="letter" (click)="getLetter('P')">P</button>
+                <button class="letter" (click)="getLetter('Q', $event)">Q</button>
+                <button class="letter" (click)="getLetter('W', $event)">W</button>
+                <button class="letter" (click)="getLetter('E', $event)">E</button>
+                <button class="letter" (click)="getLetter('R', $event)">R</button>
+                <button class="letter" (click)="getLetter('T', $event)">T</button>
+                <button class="letter" (click)="getLetter('Y', $event)">Y</button>
+                <button class="letter" (click)="getLetter('U', $event)">U</button>
+                <button class="letter" (click)="getLetter('I', $event)">I</button>
+                <button class="letter" (click)="getLetter('O', $event)">O</button>
+                <button class="letter" (click)="getLetter('P', $event)">P</button>
             </div>
             <div class="row-2">
-                <button class="letter" (click)="getLetter('A')">A</button>
-                <button class="letter" (click)="getLetter('S')">S</button>
-                <button class="letter" (click)="getLetter('D')">D</button>
-                <button class="letter" (click)="getLetter('F')">F</button>
-                <button class="letter" (click)="getLetter('G')">G</button>
-                <button class="letter" (click)="getLetter('H')">H</button>
-                <button class="letter" (click)="getLetter('J')">J</button>
-                <button class="letter" (click)="getLetter('K')">K</button>
-                <button class="letter" (click)="getLetter('L')">L</button>
-                <button class="letter" (click)="getLetter('Ñ')">Ñ</button>
+                <button class="letter" (click)="getLetter('A', $event)">A</button>
+                <button class="letter" (click)="getLetter('S', $event)">S</button>
+                <button class="letter" (click)="getLetter('D', $event)">D</button>
+                <button class="letter" (click)="getLetter('F', $event)">F</button>
+                <button class="letter" (click)="getLetter('G', $event)">G</button>
+                <button class="letter" (click)="getLetter('H', $event)">H</button>
+                <button class="letter" (click)="getLetter('J', $event)">J</button>
+                <button class="letter" (click)="getLetter('K', $event)">K</button>
+                <button class="letter" (click)="getLetter('L', $event)">L</button>
+                <button class="letter" (click)="getLetter('Ñ', $event)">Ñ</button>
             </div>
             <div class="row-3">
-                <button class="letter" (click)="getLetter('Z')">Z</button>
-                <button class="letter" (click)="getLetter('X')">X</button>
-                <button class="letter" (click)="getLetter('C')">C</button>
-                <button class="letter" (click)="getLetter('V')">V</button>
-                <button class="letter" (click)="getLetter('B')">B</button>
-                <button class="letter" (click)="getLetter('N')">N</button>
-                <button class="letter" (click)="getLetter('M')">M</button>
+                <button class="letter" (click)="getLetter('Z', $event)">Z</button>
+                <button class="letter" (click)="getLetter('X', $event)">X</button>
+                <button class="letter" (click)="getLetter('C', $event)">C</button>
+                <button class="letter" (click)="getLetter('V', $event)">V</button>
+                <button class="letter" (click)="getLetter('B', $event)">B</button>
+                <button class="letter" (click)="getLetter('N', $event)">N</button>
+                <button class="letter" (click)="getLetter('M', $event)">M</button>
             </div>
         </div>
 
