--- a/src/app/components/mayor-o-menor/mayor-o-menor.component.html
+++ b/src/app/components/mayor-o-menor/mayor-o-menor.component.html
@@ -17,6 +17,7 @@
                 <div class="card-container d-flex justify-content-center align-items-center">
                     <div *ngIf="actualCard" class="card">
                         <img [src]="actualCard.image" class="card-img-top shadow-sm " alt="...">
+                        <h5 class="text-center mt-2">Puntuacion: {{playerScore}}</h5>
                     </div>
                 </div>
 
