modifique la api de preguntados

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
             <div class="card shadow">
                 <img src="../../../assets/ahorcado.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Ahorcado<img class="ms-2" src="../../../assets/juegos/arg.png" height="25" width="45"></h5>
+                    <h5 class="card-title">Ahorcado</h5>
                     <p class="card-text">Pon a prueba tu habilidad para descifrar palabras. Adivina la palabra oculta antes de que el ahorcado esté completo.</p>
                     <button routerLink="../ahorcado" class="btn btn-primary mt-4">Jugar</button>
                 </div>
@@ -19,7 +19,7 @@
             <div class="card shadow">
                 <img src="../../../assets/preguntados.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Preguntados<img class="ms-2" src="../../../assets/juegos/eeuu.png" height="25" width="45"></h5>
+                    <h5 class="card-title">Preguntados</h5>
                     <p class="card-text">Sumérgete en un mundo de conocimiento. Responde preguntas y desafía a tus amigos en este increible juego de trivia.</p>
                     <button routerLink="../preguntados" class="btn btn-primary mt-4">Jugar</button>
                 </div>
@@ -30,7 +30,7 @@
             <div class="card shadow">
                 <img src="../../../assets/mayomenor.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Mayor o Menor<img class="ms-2" src="../../../assets/juegos/mundo.png" height="27" width="27"></h5>
+                    <h5 class="card-title">Mayor o Menor</h5>
                     <p class="card-text">Predice si el próximo numero será mayor o menor que el anterior. Un juego de riesgo y estrategia con la emoción del azar.</p>
                     <button routerLink="../mayor-o-menor" class="btn btn-primary mt-4">Jugar</button>
                 </div>
@@ -41,7 +41,7 @@
             <div class="card shadow">
                 <img src="../../../assets/tesoro.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Busca el tesoro<img class="ms-2" src="../../../assets/juegos/mundo.png" height="27" width="27"></h5>
+                    <h5 class="card-title">Busca el tesoro</h5>
                     <p class="card-text">El jugador busca un tesoro escondido en un tablero. El juego proporciona pistas basadas en la proximidad del jugador al tesoro.</p>
                     <button routerLink="../el-tesoro" class="btn btn-primary mt-4">Jugar</button>
                 </div>
